# marui

./: Cargo.toml  LICENSE  README.md
src/: directory.rs  main.rs  python_module.rs  util.rs
test_files/package/: module.py
test_files/package/submodule/: test1.py
test_files/package/submodule/subsubmodule/: test2.py
